--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <button class="insert-btn"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44"><g fill="none" stroke="#FFF" stroke-width="2"><path d="M1 22.019C8.333 21.686 23 25.616 23 44M23 44V0M45 22.019C37.667 21.686 23 25.616 23 44"/></g></svg></button>
       </div>
     <div class="result-part">
-      <p class="main-result-text"><span class="result-text year-text">--</span>years</p>
-      <p class="main-result-text"><span class="result-text month-text">--</span>months</p>
-      <p class="main-result-text"><span class="result-text day-text">--</span>days</p>
+      <p class="main-result-text"><span class="result-text year-text">--</span><span class="years">years</span></p>
+      <p class="main-result-text"><span class="result-text month-text">--</span><span class="months">months</span></p>
+      <p class="main-result-text"><span class="result-text day-text">--</span><span class="days">days</span></p>
     </div>
   </container>
 </body>
